# magnet-code

./: .gitignore  pyproject.toml
src/magnet_code/: __init__.py  index.html
src/magnet_code/agent/: agent.py  events.py  persistence.py  session.py
src/magnet_code/client/: llm_client.py  response.py
src/magnet_code/config/: config.py  loader.py  loop_detector.py
src/magnet_code/context/: compaction.py  manager.py
src/magnet_code/hooks/: hook_system.py
src/magnet_code/prompts/: system.py
src/magnet_code/safety/: approval.py
src/magnet_code/scripts/: test_tool.py
src/magnet_code/tools/: base.py  discovery.py  subagents.py
src/magnet_code/tools/builtin/: __init__.py  edit_file.py  glob.py  grep.py  list_dir.py  memory.py  read_file.py  registry.py  shell.py  todo.py  web_fetch.py  web_search.py  write_file.py
src/magnet_code/tools/mcp/: client.py  manager.py  tool.py
src/magnet_code/ui/: tui.py
src/magnet_code/utils/: errors.py  paths.py  text.py
