[project]
name = "magnet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mihaimaganu17", email = "maganu_gx_mihai@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "click>=8.3.1",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "tiktoken>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
